# cortex-m-quickstart

./: .gdbinit  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  Xargo.toml  aliases.js  build.rs  gen-examples.sh  interrupts.x  memory.x  openocd.cfg  openocd.gdb  search-index.js
.cargo/: config  config.toml
aligned/: Aligned.t.html  Aligned.v.html  Alignment.t.html  all.html  fn.Aligned.html  index.html  sidebar-items.js  struct.Aligned.html  trait.Alignment.html
bare_metal/: CriticalSection.t.html  Nr.t.html  Peripheral.t.html  all.html  index.html  struct.CriticalSection.html  struct.Mutex.html  struct.Peripheral.html  trait.Nr.html
ci/: install.sh  script.sh
cortex_m/: all.html  index.html  iprintln.m.html  macro.iprint!.html  macro.iprint.html  macro.iprintln.html  macro.singleton.html  sidebar-items.js  singleton.m.html
cortex_m/asm/: bkpt.v.html  delay.v.html  (+18 more)
cortex_m_quickstart/: all.html  index.html  sidebar-items.js
cortex_m_rt/: ExceptionFrame.t.html  all.html  entry.m.html  exception.m.html  fn.heap_start.html  heap_start.v.html  index.html  macro.entry.html  macro.exception.html  macro.pre_init!.html  macro.pre_init.html  sidebar-items.js  struct.ExceptionFrame.html
cortex_m_semihosting/: all.html  fn.syscall.html  fn.syscall1.html  index.html  macro.syscall!.html  macro.syscall.html  macro.syscall1.html  sidebar-items.js  syscall1.m.html  syscall1.v.html
examples/: 0-agnostic.rs  1-hello.rs  2-itm.rs  3-exception-override.rs  4-srp.rs  allocator.rs  blinky.rs  crash.rs  device.rs  exception-override.rs  exception.rs  hello.rs  itm.rs  minimal.rs  override-exception-handler.rs  panic.rs  register-interrupt-handler.rs  srp.rs  test_on_host.rs
panic_semihosting/: all.html  index.html
r0/: all.html  fn.init_data.html  fn.run_init_array.html  fn.zero_bss.html  index.html  init_array.m.html  init_data.v.html  macro.init_array.html  macro.pre_init_array!.html  macro.pre_init_array.html  run_init_array.v.html  sidebar-items.js  zero_bss.v.html
src/: lib.rs  main.rs
vcell/: VolatileCell.t.html  all.html  index.html  sidebar-items.js  struct.VolatileCell.html
volatile_register/: RO.t.html  RW.t.html  WO.t.html  all.html  index.html  sidebar-items.js  struct.RO.html  struct.RW.html  struct.WO.html
(+322 files in other folders)
